src/dbml.js
// @generated by Peggy 4.2.0.
//
// https://peggyjs.org/

"use strict";


function peg$subclass(child, parent) {
  function C() { this.constructor = child; }
  C.prototype = parent.prototype;
  child.prototype = new C();
}

function peg$SyntaxError(message, expected, found, location) {
  var self = Error.call(this, message);
  // istanbul ignore next Check is a necessary evil to support older environments
  if (Object.setPrototypeOf) {
    Object.setPrototypeOf(self, peg$SyntaxError.prototype);
  }
  self.expected = expected;
  self.found = found;
  self.location = location;
  self.name = "SyntaxError";
  return self;
}

peg$subclass(peg$SyntaxError, Error);

function peg$padEnd(str, targetLength, padString) {
  padString = padString || " ";
  if (str.length > targetLength) { return str; }
  targetLength -= str.length;
  padString += padString.repeat(targetLength);
  return str + padString.slice(0, targetLength);
}

peg$SyntaxError.prototype.format = function(sources) {
  var str = "Error: " + this.message;
  if (this.location) {
    var src = null;
    var k;
    for (k = 0; k < sources.length; k++) {
      if (sources[k].source === this.location.source) {
        src = sources[k].text.split(/\r\n|\n|\r/g);
        break;
      }
    }
    var s = this.location.start;
    var offset_s = (this.location.source && (typeof this.location.source.offset === "function"))
      ? this.location.source.offset(s)
      : s;
    var loc = this.location.source + ":" + offset_s.line + ":" + offset_s.column;
    if (src) {
      var e = this.location.end;
      var filler = peg$padEnd("", offset_s.line.toString().length, ' ');
      var line = src[s.line - 1];
      var last = s.line === e.line ? e.column : line.length + 1;
      var hatLen = (last - s.column) || 1;
      str += "\n --> " + loc + "\n"
          + filler + " |\n"
          + offset_s.line + " | " + line + "\n"
          + filler + " | " + peg$padEnd("", s.column - 1, ' ')
          + peg$padEnd("", hatLen, "^");
    } else {
      str += "\n at " + loc;
    }
  }
  return str;
};

peg$SyntaxError.buildMessage = function(expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
    literal: function(expectation) {
      return "\"" + literalEscape(expectation.text) + "\"";
    },

    class: function(expectation) {
      var escapedParts = expectation.parts.map(function(part) {
        return Array.isArray(part)
          ? classEscape(part[0]) + "-" + classEscape(part[1])
          : classEscape(part);
      });

      return "[" + (expectation.inverted ? "^" : "") + escapedParts.join("") + "]";
    },

    any: function() {
      return "any character";
    },

    end: function() {
      return "end of input";
    },

    other: function(expectation) {
      return expectation.description;
    }
  };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, "\\\\")
      .replace(/"/g,  "\\\"")
      .replace(/\0/g, "\\0")
      .replace(/\t/g, "\\t")
      .replace(/\n/g, "\\n")
      .replace(/\r/g, "\\r")
      .replace(/[\x00-\x0F]/g,          function(ch) { return "\\x0" + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return "\\x"  + hex(ch); });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, "\\\\")
      .replace(/\]/g, "\\]")
      .replace(/\^/g, "\\^")
      .replace(/-/g,  "\\-")
      .replace(/\0/g, "\\0")
      .replace(/\t/g, "\\t")
      .replace(/\n/g, "\\n")
      .replace(/\r/g, "\\r")
      .replace(/[\x00-\x0F]/g,          function(ch) { return "\\x0" + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return "\\x"  + hex(ch); });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    var descriptions = expected.map(describeExpectation);
    var i, j;

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + " or " + descriptions[1];

      default:
        return descriptions.slice(0, -1).join(", ")
          + ", or "
          + descriptions[descriptions.length - 1];
    }
  }

  function describeFound(found) {
    return found ? "\"" + literalEscape(found) + "\"" : "end of input";
  }

  return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
};

function peg$parse(input, options) {
  options = options !== undefined ? options : {};

  var peg$FAILED = {};
  var peg$source = options.grammarSource;

  var peg$startRuleFunctions = { File: peg$parseFile };
  var peg$startRuleFunction = peg$parseFile;

  var peg$c0 = "project";
  var peg$c1 = "{";
  var peg$c2 = "}";
  var peg$c3 = "note";
  var peg$c4 = "table";
  var peg$c5 = "as";
  var peg$c6 = "[";
  var peg$c7 = "]";
  var peg$c8 = ".";
  var peg$c9 = "(";
  var peg$c10 = ",";
  var peg$c11 = ")";
  var peg$c12 = "indexes";
  var peg$c13 = "tablegroup";
  var peg$c14 = "ref";
  var peg$c15 = ":";
  var peg$c16 = "-";
  var peg$c17 = "<>";
  var peg$c18 = "enum";
  var peg$c19 = "\"";
  var peg$c20 = "'''";
  var peg$c21 = "'";
  var peg$c22 = "\\'";
  var peg$c23 = "\\\"";
  var peg$c24 = "//";
  var peg$c25 = "/*";
  var peg$c26 = "*/";
  var peg$c27 = "`";
  var peg$c28 = "\n";
  var peg$c29 = "\r";

  var peg$r0 = /^[a-zA-Z0-9_,\xC0-\uFFFF]/;
  var peg$r1 = /^[<>]/;
  var peg$r2 = /^[a-zA-Z0-9_\xC0-\uFFFF]/;
  var peg$r3 = /^[^"\n\r]/;
  var peg$r4 = /^[^'\\]/;
  var peg$r5 = /^[\\]/;
  var peg$r6 = /^[^"\\]/;
  var peg$r7 = /^[^\n\r]/;
  var peg$r8 = /^[^,\]:]/;
  var peg$r9 = /^[^,\]]/;
  var peg$r10 = /^[^`]/;
  var peg$r11 = /^[ \t]/;
  var peg$r12 = /^[ \t\n\r]/;

  var peg$e0 = peg$literalExpectation("Project", true);
  var peg$e1 = peg$literalExpectation("{", false);
  var peg$e2 = peg$literalExpectation("}", false);
  var peg$e3 = peg$literalExpectation("Note", true);
  var peg$e4 = peg$literalExpectation("Table", true);
  var peg$e5 = peg$literalExpectation("as", false);
  var peg$e6 = peg$literalExpectation("[", false);
  var peg$e7 = peg$classExpectation([["a", "z"], ["A", "Z"], ["0", "9"], "_", ",", ["\xC0", "\uFFFF"]], false, false);
  var peg$e8 = peg$literalExpectation("]", false);
  var peg$e9 = peg$literalExpectation(".", false);
  var peg$e10 = peg$literalExpectation("(", false);
  var peg$e11 = peg$literalExpectation(",", false);
  var peg$e12 = peg$literalExpectation(")", false);
  var peg$e13 = peg$literalExpectation("Indexes", true);
  var peg$e14 = peg$literalExpectation("TableGroup", true);
  var peg$e15 = peg$literalExpectation("Ref", true);
  var peg$e16 = peg$literalExpectation(":", false);
  var peg$e17 = peg$literalExpectation("-", false);
  var peg$e18 = peg$literalExpectation("<>", false);
  var peg$e19 = peg$classExpectation(["<", ">"], false, false);
  var peg$e20 = peg$literalExpectation("Enum", true);
  var peg$e21 = peg$classExpectation([["a", "z"], ["A", "Z"], ["0", "9"], "_", ["\xC0", "\uFFFF"]], false, false);
  var peg$e22 = peg$literalExpectation("\"", false);
  var peg$e23 = peg$classExpectation(["\"", "\n", "\r"], true, false);
  var peg$e24 = peg$literalExpectation("'''", false);
  var peg$e25 = peg$anyExpectation();
  var peg$e26 = peg$literalExpectation("'", false);
  var peg$e27 = peg$classExpectation(["'", "\\"], true, false);
  var peg$e28 = peg$literalExpectation("\\'", false);
  var peg$e29 = peg$classExpectation(["\\"], false, false);
  var peg$e30 = peg$classExpectation(["\"", "\\"], true, false);
  var peg$e31 = peg$literalExpectation("\\\"", false);
  var peg$e32 = peg$literalExpectation("//", false);
  var peg$e33 = peg$literalExpectation("/*", false);
  var peg$e34 = peg$literalExpectation("*/", false);
  var peg$e35 = peg$classExpectation(["\n", "\r"], true, false);
  var peg$e36 = peg$classExpectation([",", "]", ":"], true, false);
  var peg$e37 = peg$classExpectation([",", "]"], true, false);
  var peg$e38 = peg$literalExpectation("`", false);
  var peg$e39 = peg$classExpectation(["`"], true, false);
  var peg$e40 = peg$otherExpectation("space");
  var peg$e41 = peg$classExpectation([" ", "\t"], false, false);
  var peg$e42 = peg$otherExpectation("whitespace");
  var peg$e43 = peg$otherExpectation("pure whitespace");
  var peg$e44 = peg$classExpectation([" ", "\t", "\n", "\r"], false, false);
  var peg$e45 = peg$literalExpectation("\n", false);
  var peg$e46 = peg$literalExpectation("\r", false);

  var peg$f0 = function(all) { return all.filter(e => e); };
  var peg$f1 = function() {};
  var peg$f2 = function(declaration) { return declaration };
  var peg$f3 = function(name, options) { return { type: "project", name, options } };
  var peg$f4 = function(name, note) { return { type: "note", name, note } };
  var peg$f5 = function(name, alias, settings, items) { return { type: "table", ...name, alias, items, settings }};
  var peg$f6 = function(alias) { return alias; };
  var peg$f7 = function(head, item) { return item; };
  var peg$f8 = function(head, tail) { return [head, ...tail]; };
  var peg$f9 = function(option) { return { type: "option", option }; };
  var peg$f10 = function(name, data, settings) { return { type: "column", name, data, settings } };
  var peg$f11 = function(base, arg) { return `[${arg}]`; };
  var peg$f12 = function(base, array) { return base + array.join(""); };
  var peg$f13 = function(schema, simple) { return schema + "." + simple };
  var peg$f14 = function(outer, head, entry) { return entry; };
  var peg$f15 = function(outer, head, tail) { return [head, ...tail]; };
  var peg$f16 = function(outer, args) { return `${outer}(${args.join(",")})`; };
  var peg$f17 = function(indices) { return { type: "indices", indices }; };
  var peg$f18 = function(head, index) { return index; };
  var peg$f19 = function(head, tail) { return [head, ...tail]; };
  var peg$f20 = function(name) { return [name] };
  var peg$f21 = function(name) { return [name]; };
  var peg$f22 = function(columns, settings) { return { columns, settings } };
  var peg$f23 = function(head, entry) { return entry; };
  var peg$f24 = function(head, tail) { return [head, ...tail]; };
  var peg$f25 = function(entries) { return entries; };
  var peg$f26 = function(name, settings, items) { return { type: "group", name, items, settings }; };
  var peg$f27 = function(head, item) { return item; };
  var peg$f28 = function(head, tail) { return [head, ...tail]; };
  var peg$f29 = function(option) { return { type: "option", option }; };
  var peg$f30 = function(name) { return {type: "table", ...name} };
  var peg$f31 = function(name, from, cardinality, to, settings) { return { type: "ref", cardinality, from, to, settings }; };
  var peg$f32 = function(n) { return n; };
  var peg$f33 = function(n) { return n; };
  var peg$f34 = function(schemaTable, columns) { return { ...schemaTable, columns } };
  var peg$f35 = function(name) { return [name]; };
  var peg$f36 = function(head, name) { return name; };
  var peg$f37 = function(head, tail) { return [head, ...tail]; };
  var peg$f38 = function(columns) { return columns; };
  var peg$f39 = function(name, items) { return { type: "enum", ...name, items }};
  var peg$f40 = function(head, item) { return item; };
  var peg$f41 = function(head, tail) { return [head, ...tail].filter(i => i); };
  var peg$f42 = function(name, settings) { return { type:"value", name, settings }; };
  var peg$f43 = function(schema, name) { return {schema, name}; };
  var peg$f44 = function(name) { return {schema: null, name}; };
  var peg$f45 = function(content) { return content; };
  var peg$f46 = function() { return ""; };
  var peg$f47 = function(content) { return content; };
  var peg$f48 = function(head, c) { return c; };
  var peg$f49 = function(head, tail) { return [head, ...tail].join(""); };
  var peg$f50 = function() { return "'" };
  var peg$f51 = function(content) { return content.join(""); };
  var peg$f52 = function() { return '"' };
  var peg$f53 = function(content) { return content.join(""); };
  var peg$f54 = function(comment) { return {type: "comment", comment} };
  var peg$f55 = function(comment) { return comment; };
  var peg$f56 = function() { return ""; };
  var peg$f57 = function(comment) { return comment; };
  var peg$f58 = function(head, c) { return c; };
  var peg$f59 = function(head, tail) { return [head, ...tail].join(""); };
  var peg$f60 = function(pairs) { return pairs; };
  var peg$f61 = function(head, setting) { return setting; };
  var peg$f62 = function(head, tail) { return [head, ...tail].reduce((a, b) => Object.assign(a,b), {}); };
  var peg$f63 = function(key, v) { return v; };
  var peg$f64 = function(key, value) { return {[key]: value}; };
  var peg$f65 = function() { return text().trim().toLowerCase(); };
  var peg$f66 = function() { return text().trim(); };
  var peg$f67 = function() { return text(); };
  var peg$f68 = function(head, opt) { return opt; };
  var peg$f69 = function(head, tail) { return [head, ...tail].reduce((a, b) => Object.assign(a, b), {}); };
  var peg$f70 = function(key, value) { return { [key]: value } };
  var peg$f71 = function(key, value) { return { [key]: value } };
  var peg$f72 = function() { return text().trim().toLowerCase() };
  var peg$currPos = options.peg$currPos | 0;
  var peg$savedPos = peg$currPos;
  var peg$posDetailsCache = [{ line: 1, column: 1 }];
  var peg$maxFailPos = peg$currPos;
  var peg$maxFailExpected = options.peg$maxFailExpected || [];
  var peg$silentFails = options.peg$silentFails | 0;

  var peg$result;

  if (options.startRule) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function offset() {
    return peg$savedPos;
  }

  function range() {
    return {
      source: peg$source,
      start: peg$savedPos,
      end: peg$currPos
    };
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos];
    var p;

    if (details) {
      return details;
    } else {
      if (pos >= peg$posDetailsCache.length) {
        p = peg$posDetailsCache.length - 1;
      } else {
        p = pos;
        while (!peg$posDetailsCache[--p]) {}
      }

      details = peg$posDetailsCache[p];
      details = {
        line: details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;

      return details;
    }
  }

  function peg$computeLocation(startPos, endPos, offset) {
    var startPosDetails = peg$computePosDetails(startPos);
    var endPosDetails = peg$computePosDetails(endPos);

    var res = {
      source: peg$source,
      start: {
        offset: startPos,
        line: startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line: endPosDetails.line,
        column: endPosDetails.column
      }
    };
    if (offset && peg$source && (typeof peg$source.offset === "function")) {
      res.start = peg$source.offset(res.start);
      res.end = peg$source.offset(res.end);
    }
    return res;
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parseFile() {
    var s0, s1, s2;

    s0 = peg$currPos;
    s1 = [];
    s2 = peg$parseDBML();
    if (s2 !== peg$FAILED) {
      while (s2 !== peg$FAILED) {
        s1.push(s2);
        s2 = peg$parseDBML();
      }
    } else {
      s1 = peg$FAILED;
    }
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$f0(s1);
    }
    s0 = s1;

    return s0;
  }

  function peg$parseDBML() {
    var s0, s1, s2, s3;

    s0 = peg$currPos;
    s1 = peg$parse_();
    s2 = peg$parseComment();
    if (s2 === peg$FAILED) {
      s2 = peg$parseProject();
      if (s2 === peg$FAILED) {
        s2 = peg$parseStickyNote();
        if (s2 === peg$FAILED) {
          s2 = peg$parseTable();
          if (s2 === peg$FAILED) {
            s2 = peg$parseTableGroup();
            if (s2 === peg$FAILED) {
              s2 = peg$parseRef();
              if (s2 === peg$FAILED) {
                s2 = peg$parseEnum();
                if (s2 === peg$FAILED) {
                  s2 = peg$currPos;
                  s3 = peg$parseNewLine();
                  if (s3 !== peg$FAILED) {
                    peg$savedPos = s2;
                    s3 = peg$f1();
                  }
                  s2 = s3;
                }
              }
            }
          }
        }
      }
    }
    if (s2 !== peg$FAILED) {
      peg$savedPos = s0;
      s0 = peg$f2(s2);
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseProject() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9;

    s0 = peg$currPos;
    s1 = input.substr(peg$currPos, 7);
    if (s1.toLowerCase() === peg$c0) {
      peg$currPos += 7;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e0); }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parse_();
      s3 = peg$parseName();
      if (s3 === peg$FAILED) {
        s3 = null;
      }
      s4 = peg$parse__();
      if (input.charCodeAt(peg$currPos) === 123) {
        s5 = peg$c1;
        peg$currPos++;
      } else {
        s5 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e1); }
      }
      if (s5 !== peg$FAILED) {
        s6 = peg$parse__();
        s7 = peg$parseOptions();
        s8 = peg$parse__();
        if (input.charCodeAt(peg$currPos) === 125) {
          s9 = peg$c2;
          peg$currPos++;
        } else {
          s9 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$e2); }
        }
        if (s9 !== peg$FAILED) {
          peg$savedPos = s0;
          s0 = peg$f3(s3, s7);
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseStickyNote() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9;

    s0 = peg$currPos;
    s1 = input.substr(peg$currPos, 4);
    if (s1.toLowerCase() === peg$c3) {
      peg$currPos += 4;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e3); }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parse_();
      s3 = peg$parseName();
      if (s3 !== peg$FAILED) {
        s4 = peg$parse__();
        if (input.charCodeAt(peg$currPos) === 123) {
          s5 = peg$c1;
          peg$currPos++;
        } else {
          s5 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$e1); }
        }
        if (s5 !== peg$FAILED) {
          s6 = peg$parse__();
          s7 = peg$parseString();
          if (s7 !== peg$FAILED) {
            s8 = peg$parse__();
            if (input.charCodeAt(peg$currPos) === 125) {
              s9 = peg$c2;
              peg$currPos++;
            } else {
              s9 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$e2); }
            }
            if (s9 !== peg$FAILED) {
              peg$savedPos = s0;
              s0 = peg$f4(s3, s7);
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseTable() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10, s11, s12, s13;

    s0 = peg$currPos;
    s1 = input.substr(peg$currPos, 5);
    if (s1.toLowerCase() === peg$c4) {
      peg$currPos += 5;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e4); }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parse_();
      s3 = peg$parseSchemaElementName();
      if (s3 !== peg$FAILED) {
        s4 = peg$parse_();
        s5 = peg$parseTableAlias();
        if (s5 === peg$FAILED) {
          s5 = null;
        }
        s6 = peg$parse_();
        s7 = peg$parseSettings();
        if (s7 === peg$FAILED) {
          s7 = null;
        }
        s8 = peg$parse__();
        if (input.charCodeAt(peg$currPos) === 123) {
          s9 = peg$c1;
          peg$currPos++;
        } else {
          s9 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$e1); }
        }
        if (s9 !== peg$FAILED) {
          s10 = peg$parse__();
          s11 = peg$parseTableItems();
          s12 = peg$parse__();
          if (input.charCodeAt(peg$currPos) === 125) {
            s13 = peg$c2;
            peg$currPos++;
          } else {
            s13 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$e2); }
          }
          if (s13 !== peg$FAILED) {
            peg$savedPos = s0;
            s0 = peg$f5(s3, s5, s7, s11);
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseTableAlias() {
    var s0, s1, s2, s3;

    s0 = peg$currPos;
    if (input.substr(peg$currPos, 2) === peg$c5) {
      s1 = peg$c5;
      peg$currPos += 2;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e5); }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parse_();
      s3 = peg$parseName();
      if (s3 !== peg$FAILED) {
        peg$savedPos = s0;
        s0 = peg$f6(s3);
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseTableItems() {
    var s0, s1, s2, s3, s4, s5, s6;

    s0 = peg$currPos;
    s1 = peg$parseTableItem();
    if (s1 !== peg$FAILED) {
      s2 = [];
      s3 = peg$currPos;
      s4 = peg$parseEOL();
      if (s4 !== peg$FAILED) {
        s5 = peg$parse__();
        s6 = peg$parseTableItem();
        if (s6 !== peg$FAILED) {
          peg$savedPos = s3;
          s3 = peg$f7(s1, s6);
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
      } else {
        peg$currPos = s3;
        s3 = peg$FAILED;
      }
      while (s3 !== peg$FAILED) {
        s2.push(s3);
        s3 = peg$currPos;
        s4 = peg$parseEOL();
        if (s4 !== peg$FAILED) {
          s5 = peg$parse__();
          s6 = peg$parseTableItem();
          if (s6 !== peg$FAILED) {
            peg$savedPos = s3;
            s3 = peg$f7(s1, s6);
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
      }
      peg$savedPos = s0;
      s0 = peg$f8(s1, s2);
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    if (s0 === peg$FAILED) {
      s0 = null;
    }

    return s0;
  }

  function peg$parseTableItem() {
    var s0, s1;

    s0 = peg$parseColumn();
    if (s0 === peg$FAILED) {
      s0 = peg$parseIndices();
      if (s0 === peg$FAILED) {
        s0 = peg$currPos;
        s1 = peg$parseOption();
        if (s1 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$f9(s1);
        }
        s0 = s1;
      }
    }
